--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<!-- logo -->
                     <a class="navbar-brand" href="#body">
 						<h1 id="logo">
-							<img src="" alt="Brandi">
+							<img src="" alt="Talentovana vestica ">
 						</h1>
 					</a>
 					<!-- /logo -->
