--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							
 							<div class="service-desc">
 								<h3>Branding</h3>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+								<p>Sa onlajn dizajnerom najzad možeš osloboditi svoju maštu i izraziti svoj jedinstveni stil. Dizajner ti pruža mogućnost da dizajniraš jedinstvene majice i šolje kakve ćeš samo ti imati. Izrađujemo kvalitetne unikatne majice tehnologijom koja je trajna tako da se tvoje jedinstvene kreacije, aplikovane na majici, neće istegliti, popucati niti izbledeti.</p>
 							</div>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 							
 							<div class="service-desc">
 								<h3>Development</h3>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+								<p></p>
 							</div>
 						</div>
 					</div>
